--- a/AyurvedicTreatment/AyurvedicTreatment.csproj
+++ b/AyurvedicTreatment/AyurvedicTreatment.csproj
@@ -108,10 +108,14 @@
     <Content Include="Assets\AyurvedicTreatment1.png" />
     <Content Include="Assets\AyurvedicTreatment2.png" />
     <Content Include="Assets\AyurvedicTreatmentssss.png" />
+    <Content Include="Assets\Logo.scale-100.png" />
     <Content Include="Assets\Logo.scale-240.png" />
     <Content Include="Assets\SmallLogo.scale-240.png" />
     <Content Include="Assets\SplashScreen.scale-240.png" />
-    <Content Include="Assets\Square71x71Logo.scale-240.png" />
+    <Content Include="Assets\Square120.png" />
+    <Content Include="Assets\Square150.png" />
+    <Content Include="Assets\Square170.png" />
+    <Content Include="Assets\Square44.png" />
     <Content Include="Assets\StoreLogo.scale-240.png" />
     <Content Include="Assets\WideLogo.scale-240.png" />
     <Content Include="Background\des-bg.png" />
@@ -124,6 +128,7 @@
     <Content Include="Html\Kshudgaga.png" />
     <Content Include="Html\lilasana.png" />
     <Content Include="Html\marjara.png" />
+    <Content Include="Html\PadmaDes.html" />
     <Content Include="Html\ratipasha.png" />
     <Content Include="Html\ratisundara.png" />
     <Content Include="Html\Samudamsha.png" />
@@ -152,8 +157,9 @@
     <Content Include="Background\rowBackground.png" />
     <Content Include="Html\virsha.png" />
     <Content Include="Html\Sirovasthi.html" />
-    <Content Include="NewFolder1\avalambitaka.jpg" />
+    <Content Include="NewFolder1\avalambitakaIcon.jpg" />
     <Content Include="NewFolder1\bhramara.jpg" />
+    <Content Include="NewFolder1\bhramaraIcon.jpg" />
     <Content Include="NewFolder1\dhenukaIcon.png" />
     <Content Include="NewFolder1\dolaIcon.png" />
     <Content Include="NewFolder1\dolitaIcon.png" />
